--- a/Core/FollowUp.Application/FollowUp.Application.csproj
+++ b/Core/FollowUp.Application/FollowUp.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FollowUp.Domain\FollowUp.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
