--- a/Infrastructure/FollowUp.Infrastructure/FollowUp.Infrastructure.csproj
+++ b/Infrastructure/FollowUp.Infrastructure/FollowUp.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\FollowUp.Application\FollowUp.Application.csproj" />
+  </ItemGroup>
+
 </Project>
